# role-based-notif-system

./: .gitignore  README.md  docker-compose.yml
server/: Dockerfile  alembic.ini  pyproject.toml  ruff.toml  schema.dbml
server/alembic/: env.py
server/alembic/versions/: f531dec1dad4_initial_schema.py
server/scripts/: ensure_test_db.py  seed.py
server/src/: config.py  logger_config.py  main.py
server/src/api/: deps.py
server/src/api/v1/: notifications.py  roles.py  router.py  users.py  websocket.py
server/src/core/: constants.py
server/src/db/: base.py  models.py  session.py
server/src/schemas/: notification.py  role.py  user.py
server/src/services/: connection_manager.py  notification_service.py
server/tests/: conftest.py  test_admin.py  test_notifications.py  test_users.py
website/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx
website/src/api/: client.ts  notifications.ts  users.ts
website/src/components/: AdminPanel.tsx  NotificationBell.tsx  NotificationItem.tsx  NotificationList.tsx  UserSwitcher.tsx
website/src/components/common/: Badge.tsx  Button.tsx  Modal.tsx
website/src/context/: UserContext.tsx
website/src/hooks/: useNotifications.ts  useUser.ts  useWebSocket.ts
website/src/pages/: Home.tsx
website/src/types/: index.ts
website/src/utils/: date.ts  mockData.ts
